# 3rd-semester-c-plus-plus

./: CMakeLists.txt  README.md  main.cpp
LeetCode/: functionsLeetCode.cpp  headerLeetCode.h  mainLeetCode.cpp
Tetris/: Game.cpp  Game.h  GameField.cpp  GameField.h  main.cpp
myLabs/Katya/: Exceptions.h  functions.cpp  functions.h  main.cpp
myLabs/LabNumber1/: employee.cpp  employee.h  mainLab1.cpp
myLabs/ListSTD/: main.cpp
myLabs/lab1_employee/: employee.h
myLabs/lab2_my_string/: Mystring.h  class.cpp  mainLab2.cpp
myLabs/lab3_advanced_oop/: Computer.cpp  Computer.h  Laptop.cpp  functions.cpp
myLabs/lab4_binary_tree/: Computer.h  Desktop.cpp  Exception.h
myLabs/labNumber2 : Mystring/: Mystring.cpp  Mystring.h  class.h  mainLab2.cpp
myLabs/labNumber3/: Desktop.cpp  Monoblock.cpp  TabletComputer.cpp  main.cpp
myLabs/labNumber3 : inheritance and virtual/: Computer.cpp  Computer.h  Desktop.cpp  Laptop.cpp  Monoblock.cpp  PortableDevice.cpp  TabletComputer.cpp  functions.cpp  header.h  main.cpp
myLabs/labNumber4BinaryTree/: Algorithm.h  Computer.cpp  Exception.cpp  Exception.h  Tree.cpp  Tree.h  functions.cpp  header.h  main.cpp
src/lab2_my_string/: Mystring.cpp
src/lab4_binary_tree/: main.cpp
